<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RedditReader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_navigation_drawer">Open</string>
    <string name="close_navigation_drawer">Close</string>
    <string name="action_sort_menu">Sort</string>
    <string name="action_sort_hot">Hot</string>
    <string name="action_sort_new">New</string>
    <string name="action_sort_rising">Rising</string>
    <string name="action_sort_controversial">Controversial</string>
    <string name="action_sort_top">Top</string>
    <string name="action_sort_from_hour">Hour</string>
    <string name="action_sort_from_day">Day</string>
    <string name="action_sort_from_week">Week</string>
    <string name="action_sort_from_month">Month</string>
    <string name="action_sort_from_year">Year</string>
    <string name="action_sort_from_all">All</string>
    <string name="error_intent_cannot_be_handled">No Activity found to handle this intent</string>
    <string name="social_share_dialog_title">Social Share</string>
    <string name="navigation_drawer_action_profile">Profile</string>
    <string name="navigation_drawer_action_subreddits">Subreddits</string>
    <string name="navigation_drawer_action_settings">Settings</string>
    <string name="navigation_drawer_subheader_subreddits_anonymous">Default Subreddits</string>
    <string name="navigation_drawer_subheader_subreddits_authenticated">Favourite Subreddits</string>
    <string name="navigation_drawer_add_account">Add Account</string>
    <string name="edittext_hint_username">Username</string>
    <string name="edittext_hint_password">Password</string>
    <string name="add_account_dialog_title">Add Account</string>
    <string name="add_account_dialog_positive">Add</string>
    <string name="add_account_dialog_negative">Cancel</string>
    <string name="error_username_blank">Username cannot be left blank</string>
    <string name="error_password_blank">Password cannot be left blank</string>
    <string name="error_username_or_password_incorrect">Incorrect username or password</string>
    <string name="success_login_base">Logged in as:</string>
    <string name="success_logout">Logged out</string>
    <string name="choose_account_dialog_title">Choose Account</string>
    <string name="choose_account_dialog_positive">Done</string>
    <string name="choose_account_dialog_negative">Cancel</string>
    <string name="choose_account_dialog_add_account_item">Add Account</string>
    <string name="add_account_progress_dialog_message">Adding account…</string>
    <string name="navigation_drawer_login">Log in</string>
    <string name="logout_confirmation_dialog_title">Log out</string>
    <string name="logout_confirmation_dialog_message">Are you sure you want to log out?</string>
    <string name="logout_confirmation_dialog_positive">Yes</string>
    <string name="logout_confirmation_dialog_negative">Cancel</string>
    <string name="title_activity_subreddits">Favourite Subreddits</string>
    <string name="navigation_drawer_edit_subreddits">EDIT</string>
    <string name="error_login_required">You need to log in to perform this action</string>
    <string name="error_cannot_remove_front_page_from_favourites">Front Page cannot be removed from Favourites</string>
    <string name="success_added_to_favourites_base">has been added to Favourites</string>
    <string name="success_removed_from_favourites_base">has been removed from Favourites</string>
    <string name="please_wait_progress_dialog_message">Please wait…</string>
    <string name="subreddit_unsubscribe_base">Unsubscribed from</string>
    <string name="subreddit_subscribe_base">Subscribed to</string>
    <string name="error_failed_to_perform_requested_operation">Failed to perform the requested operation</string>

</resources>
